Hide the toolbar when in extension fullscreen on OSX

BUG=603692

Review URL: https://codereview.chromium.org/1891393003

Cr-Commit-Position: refs/heads/master@{#387971}

Former-commit-id: dc08b44fc987d1849f3d30661dd3af47e6bc5b38